--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ bld/
 [Ll]ogs/
 
 # Visual Studio 2015/2017 cache/options directory
-.vs/
+ICFSim/.vs/
+ICFSim/x64/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
