--- a/ICFSim/ICFSim/ICFSim.vcxproj.filters
+++ b/ICFSim/ICFSim/ICFSim.vcxproj.filters
@@ -74,8 +74,12 @@
     <ClInclude Include="include\Material.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="shaders\fluid.frag.glsl" />
   </ItemGroup>
 </Project>
